--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/glfw"]
 	path = lib/glfw
 	url = git@github.com:glfw/glfw.git
+[submodule "lib/soil"]
+	path = lib/soil
+	url = git@github.com:kbranigan/Simple-OpenGL-Image-Library.git
