--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "lib/soil"]
 	path = lib/soil
 	url = git@github.com:kbranigan/Simple-OpenGL-Image-Library.git
+[submodule "lib/glm"]
+	path = lib/glm
+	url = git@github.com:g-truc/glm.git
